--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "y",
     "publisher":"csq",
     "displayName": "Beici",
-    "description": "摸鱼背单词工具，仿vscode文件列表，让你毫无顾忌，放肆的记单词!",
+    "description": "摸鱼学英语工具，仿vscode文件列表，让你毫无顾忌，放肆的记单词!",
     "version": "0.1.0",
     "engines": {
         "vscode": "^1.54.0"
@@ -148,7 +148,7 @@
             "activitybar": [
                 {
                     "id": "beici-explorer",
-                    "title": "Hello English",
+                    "title": "Beici",
                     "icon": "resources/english.svg"
                 }
             ]
