--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "y",
+    "name": "Beici",
     "publisher":"csq",
     "displayName": "Beici",
     "description": "摸鱼学英语工具，仿vscode文件列表，让你毫无顾忌，放肆的记单词!",
-    "version": "0.1.0",
+    "version": "0.1.2",
     "engines": {
         "vscode": "^1.54.0"
     },
